Refactor part 4