@@ -1,6 +1,7 @@
 package Walking.Drones;
 
 import Character.Enemy.EnemyCharacter;
+import Game.GameManager;
 import Walking.Collision.EnemyFightException;
 import Walking.Collision.EnterExitException;
 import Walking.GameMap;
@@ -12,10 +13,9 @@ import java.util.*;
 
 public class EnemyDrone extends Drone
 {
-    private final double chanceToMove=0.5;
-    private final static int seeRange=5;
+    private final static double chanceToMove=0.5;
+    private final static int seeRange=6;
     private final static int[] movement={0,1,1,0,0,-1,-1,0};
-    private final Random random;
     private ArrayList<NextMove> moves;
     private final GamePlace pursuitIcon;
     private final ArrayList<EnemyCharacter> enemies;
@@ -25,7 +25,6 @@ public class EnemyDrone extends Drone
         this.pursuitIcon=pursuitIcon;
         this.pursuitIcon.setReference(this);
         super.getIcon().setReference(this);
-        random=new Random();
         moves=new ArrayList<>();
         this.enemies=enemies;
     }
@@ -35,7 +34,7 @@ public class EnemyDrone extends Drone
     }
 
     public boolean ifMove(){
-        return !moves.isEmpty() || random.nextDouble(0, 1) <= chanceToMove;
+        return !moves.isEmpty() || GameManager.getRandom().nextDouble(0, 1) <= chanceToMove;
     }
 
     public void ifPlayerWasSeen(int playerX, int playerY, GameMap map){
@@ -55,19 +54,19 @@ public class EnemyDrone extends Drone
         for(int iter=0;iter<seeRange;iter++){
             while(!moveStack.isEmpty()){
                 ArrayList<NextMove> nextMoveList=moveStack.pop();
-                NextMove lastMove=nextMoveList.get(nextMoveList.size()-1);
+                NextMove lastMove=nextMoveList.getLast();
                 for(int i=0;i<movement.length;i+=2){
                     GamePlace place=map.getPlace(lastMove.x+movement[i],lastMove.y+movement[i+1]);
                     //If player was found
                     if(place instanceof PlayerGamePlace){
-                        nextMoveList.remove(0);
-                        nextMoveList.add(new NextMove(movement[i],movement[i+1],lastMove.x+movement[i],lastMove.y+movement[i+1]));
+                        nextMoveList.removeFirst();
+                        nextMoveList.add(new NextMove(movement[i], movement[i + 1], lastMove.x + movement[i], lastMove.y + movement[i + 1]));
                         moves=nextMoveList;
                         return;
                     }//If space was not checked
                     else if(place instanceof SpaceGamePlace && !checkedPlaces[lastMove.y+movement[i+1]-yOffSet][lastMove.x+movement[i]-xOffSet]){
-                        ArrayList<NextMove> newMoveList= (ArrayList<NextMove>) nextMoveList.clone();
-                        newMoveList.add(new NextMove(movement[i],movement[i+1],lastMove.x+movement[i],lastMove.y+movement[i+1]));
+                        ArrayList<NextMove> newMoveList = new ArrayList<>(nextMoveList);
+                        newMoveList.add(new NextMove(movement[i], movement[i + 1], lastMove.x + movement[i], lastMove.y + movement[i + 1]));
                         nextMoveStack.add(newMoveList);
 
                         checkedPlaces[lastMove.y+movement[i+1]-yOffSet][lastMove.x+movement[i]-xOffSet]=true;
@@ -83,8 +82,8 @@ public class EnemyDrone extends Drone
         //If some moves was saved
         if(!moves.isEmpty()){
             try {
-               if(gameMap.changeCharacterPlace(this, moves.get(0).dx, moves.get(0).dy))
-                    moves.remove(0);
+               if(gameMap.changeCharacterPlace(this, moves.getFirst().dx, moves.getFirst().dy))
+                    moves.removeFirst();
                 return;
             }catch (EnterExitException ignored) {}
         }
@@ -92,7 +91,7 @@ public class EnemyDrone extends Drone
         int count=3;
         int r;
         while(count>0) {
-            r = random.nextInt(4);
+            r = GameManager.getRandom().nextInt(4);
             try {
                 if(gameMap.changeCharacterPlace(this, movement[r * 2], movement[r * 2 + 1]))
                     break;
@@ -107,17 +106,6 @@ public class EnemyDrone extends Drone
         return moves.isEmpty()?super.getIcon():pursuitIcon;
     }
 
-    private class NextMove{
-        final int dx;
-        final int dy;
-        final int x;
-        final int y;
-
-        public NextMove(int dx, int dy,int x,int y) {
-            this.dx = dx;
-            this.dy = dy;
-            this.x=x;
-            this.y=y;
-        }
+    private record NextMove(int dx, int dy, int x, int y) {
     }
 }
